This is the front end

--- a/Lonelysg/app/src/main/res/values/strings.xml
+++ b/Lonelysg/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
         <item>3pm-6pm 1 April 2020</item>
         <item>7pm-8pm 2 April 2020</item>
     </string-array>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
